News UAT/force-app/main/default/objects/External_Account__c/External_Account__c.object-meta.xml
<CustomObject>
    <description>Object to hold external accounts such as Billing and Booking Accounts</description>
    <label>Booking System Account</label>
    <nameField>
        <label>Booking System Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Booking System Accounts</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>