News UAT/force-app/main/default/objects/External_Account__c/fields/ABN_Number__c.field-meta.xml
<CustomField>
    <fullName>ABN_Number__c</fullName>
    <description>ABN Number</description>
    <inlineHelpText>ABN Number</inlineHelpText>
    <label>ABN Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>