News UAT/force-app/main/default/objects/External_Account__c/fields/Account_No__c.field-meta.xml
<CustomField>
    <fullName>Account_No__c</fullName>
    <description>Used to store the Billing/Booking Account Number</description>
    <inlineHelpText>Used to store the Billing/Booking Account Number</inlineHelpText>
    <label>Account #</label>
    <length>30</length>
    <type>Text</type>
</CustomField>