News UAT/force-app/main/default/objects/External_Account__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <description>Booking/Billing Account Type</description>
    <inlineHelpText>Booking/Billing Account Type</inlineHelpText>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Established</fullName>
                <default>true</default>
                <label>Established</label>
            </value>
            <value>
                <fullName>Ad Agency</fullName>
            </value>
            <value>
                <fullName>ABN Exempt</fullName>
            </value>
            <value>
                <fullName>Casual Business</fullName>
            </value>
            <value>
                <fullName>Private Party</fullName>
            </value>
            <value>
                <fullName>House</fullName>
            </value>
            <value>
                <fullName>Newsagent</fullName>
            </value>
            <value>
                <fullName>Overseas Agent</fullName>
            </value>
            <value>
                <fullName>Non Established</fullName>
            </value>
            <value>
                <fullName>Client of Ad Agency</fullName>
            </value>
            <value>
                <fullName>Sub corporate</fullName>
            </value>
            <value>
                <fullName>Client of Overseas Advertising Agency</fullName>
            </value>
            <value>
                <fullName>Client of Overseas Agent</fullName>
            </value>
            <value>
                <fullName>Contra</fullName>
            </value>
            <value>
                <fullName>Overseas Advertising Agency</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>