News UAT/force-app/main/default/objects/External_Account__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>IF(ISBLANK(Street__c), &#39;&#39;, Street__c + &#39;, &#39;) + IF(ISBLANK(Suburb__c), &#39;&#39;, Suburb__c + &#39;, &#39;) + IF(ISBLANK(State__c ), &#39;&#39;, State__c + &#39;, &#39;) + IF(ISBLANK(Post_Code__c), &#39;&#39;, Post_Code__c + &#39;, &#39;) + IF(ISBLANK(Country__c), &#39;&#39;, Country__c)</formula>
    <label>Address</label>
    <type>Text</type>
</CustomField>