News UAT/force-app/main/default/objects/External_Account__c/fields/Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue__c</fullName>
    <description>External Account Annual Revenue</description>
    <inlineHelpText>External Account Annual Revenue</inlineHelpText>
    <label>Annual Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>