News UAT/force-app/main/default/objects/External_Account__c/fields/Available_Credit__c.field-meta.xml
<CustomField>
    <fullName>Available_Credit__c</fullName>
    <description>External Account Available Credit</description>
    <inlineHelpText>External Account Available Credit</inlineHelpText>
    <label>Available Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>