News UAT/force-app/main/default/objects/External_Account__c/fields/Billing_Account_Name_Display__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account_Name_Display__c</fullName>
    <formula>Division__c + &#39; &#39; + Account_No__c + &#39; &#39; + Name + &#39; &#39; + RecordType.Name +&#39; (&#39; + Address__c + &#39;)&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Account Name Display</label>
    <type>Text</type>
</CustomField>