News UAT/force-app/main/default/objects/External_Account__c/fields/BSA__c.field-meta.xml
<CustomField>
    <fullName>BSA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For configuring post pay on leapfrog. GBA.</description>
    <label>GBA</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>This is not a valid GBA.</errorMessage>
        <filterItems>
            <field>External_Account__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Booking Account</value>
        </filterItems>
        <filterItems>
            <field>External_Account__c.Customer_Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Customer_Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>External_Account__c</referenceTo>
    <relationshipLabel>Booking System Accounts (BSA)</relationshipLabel>
    <relationshipName>Booking_System_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>