News UAT/force-app/main/default/objects/External_Account__c/fields/BSA_Account_No__c.field-meta.xml
<CustomField>
    <fullName>BSA_Account_No__c</fullName>
    <formula>BSA__r.Account_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GBA Account #</label>
    <type>Text</type>
</CustomField>