News UAT/force-app/main/default/objects/External_Account__c/fields/BSA_Net_DA__c.field-meta.xml
<CustomField>
    <fullName>BSA_Net_DA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For leapfrog post-pay configuration.</description>
    <label>Net DA</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND (2 OR 3) AND 4</booleanFilter>
        <errorMessage>This is not a valid Net DA Account</errorMessage>
        <filterItems>
            <field>External_Account__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Billing Account</value>
        </filterItems>
        <filterItems>
            <field>External_Account__c.Division__c</field>
            <operation>equals</operation>
            <value>National</value>
        </filterItems>
        <filterItems>
            <field>External_Account__c.Division__c</field>
            <operation>equals</operation>
            <value>NOZ</value>
        </filterItems>
        <filterItems>
            <field>External_Account__c.Customer_Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Customer_Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>External_Account__c</referenceTo>
    <relationshipLabel>Booking System Accounts (BSA Net DA)</relationshipLabel>
    <relationshipName>BSA_Net_DAs</relationshipName>
    <type>Lookup</type>
</CustomField>