News UAT/force-app/main/default/objects/External_Account__c/fields/BSA_Net_DA_Account_No__c.field-meta.xml
<CustomField>
    <fullName>BSA_Net_DA_Account_No__c</fullName>
    <formula>BSA_Net_DA__r.Account_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net DA Account #</label>
    <type>Text</type>
</CustomField>