News UAT/force-app/main/default/objects/External_Account__c/fields/Charges_This_Period__c.field-meta.xml
<CustomField>
    <fullName>Charges_This_Period__c</fullName>
    <description>External Account Charges This Period</description>
    <inlineHelpText>External Account Charges This Period</inlineHelpText>
    <label>Charges This Period</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>