News UAT/force-app/main/default/objects/External_Account__c/fields/Confirm_All_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Confirm_All_Bookings__c</fullName>
    <defaultValue>false</defaultValue>
    <description>External Account Confirm All Bookings</description>
    <inlineHelpText>External Account Confirm All Bookings</inlineHelpText>
    <label>Confirm All Bookings</label>
    <type>Checkbox</type>
</CustomField>