News UAT/force-app/main/default/objects/External_Account__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>External Account Address Country</description>
    <inlineHelpText>External Account Address Country</inlineHelpText>
    <label>Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>