News UAT/force-app/main/default/objects/External_Account__c/fields/Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit__c</fullName>
    <description>External Account Credit Limit</description>
    <inlineHelpText>External Account Credit Limit</inlineHelpText>
    <label>Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>