News UAT/force-app/main/default/objects/External_Account__c/fields/Credit_Status__c.field-meta.xml
<CustomField>
    <fullName>Credit_Status__c</fullName>
    <description>External Account Credit Status</description>
    <inlineHelpText>External Account Credit Status</inlineHelpText>
    <label>Credit Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 = Green/Go</fullName>
            </value>
            <value>
                <fullName>2 = Review (bookings go to credit but will run regardless)</fullName>
            </value>
            <value>
                <fullName>3 = Risk (bookings can be made but will not run)</fullName>
            </value>
            <value>
                <fullName>4 = High Risk (bookings cannot be made, sales to follow up with NFSS)</fullName>
            </value>
            <value>
                <fullName>5 = Cash (Pre-payment required)</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Amber</fullName>
            </value>
            <value>
                <fullName>Orange</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>