News UAT/force-app/main/default/objects/External_Account__c/fields/Credit_Terms__c.field-meta.xml
<CustomField>
    <fullName>Credit_Terms__c</fullName>
    <description>Credit Terms</description>
    <inlineHelpText>Credit Terms</inlineHelpText>
    <label>Credit Terms</label>
    <type>TextArea</type>
</CustomField>