News UAT/force-app/main/default/objects/External_Account__c/fields/Current_Balance__c.field-meta.xml
<CustomField>
    <fullName>Current_Balance__c</fullName>
    <description>External Account Current Balance</description>
    <inlineHelpText>External Account Current Balance</inlineHelpText>
    <label>Current Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>