News UAT/force-app/main/default/objects/External_Account__c/fields/Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The External Account&#39;s parent Customer Account</description>
    <inlineHelpText>The External Account&#39;s parent Customer Account</inlineHelpText>
    <label>Customer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>External_Accounts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>