News UAT/force-app/main/default/objects/External_Account__c/fields/CustomerDiscount__c.field-meta.xml
<CustomField>
    <fullName>CustomerDiscount__c</fullName>
    <description>NextGen</description>
    <label>CustomerDiscount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>