News UAT/force-app/main/default/objects/External_Account__c/fields/Default_Revenue_Group__c.field-meta.xml
<CustomField>
    <fullName>Default_Revenue_Group__c</fullName>
    <description>Booking Account Default Revenue Group</description>
    <inlineHelpText>Booking Account Default Revenue Group</inlineHelpText>
    <label>Default Revenue Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amusements</fullName>
            </value>
            <value>
                <fullName>Election-Political</fullName>
            </value>
            <value>
                <fullName>Employment</fullName>
            </value>
            <value>
                <fullName>House</fullName>
            </value>
            <value>
                <fullName>MV Dealers</fullName>
            </value>
            <value>
                <fullName>Nat - Com/Bus Equip</fullName>
            </value>
            <value>
                <fullName>Nat - Computers</fullName>
            </value>
            <value>
                <fullName>Nat - Finance</fullName>
            </value>
            <value>
                <fullName>Nat - Food &amp; Bev</fullName>
            </value>
            <value>
                <fullName>Nat - Gamb/Gaming</fullName>
            </value>
            <value>
                <fullName>Nat - Gov/Pol Part</fullName>
            </value>
            <value>
                <fullName>Nat - Media</fullName>
            </value>
            <value>
                <fullName>Nat - MV Manufact</fullName>
            </value>
            <value>
                <fullName>Nat - Other</fullName>
            </value>
            <value>
                <fullName>Nat - Pers Care Prod</fullName>
            </value>
            <value>
                <fullName>Nat - Pharm/Hth Prod</fullName>
            </value>
            <value>
                <fullName>Nat - Travel/Accom</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>