News UAT/force-app/main/default/objects/External_Account__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <description>External Account Division</description>
    <inlineHelpText>External Account Division</inlineHelpText>
    <label>Division</label>
    <length>255</length>
    <type>Text</type>
</CustomField>