News UAT/force-app/main/default/objects/External_Account__c/fields/DPID__c.field-meta.xml
<CustomField>
    <fullName>DPID__c</fullName>
    <description>External Account Address DPID</description>
    <inlineHelpText>External Account Address DPID</inlineHelpText>
    <label>DPID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>