News UAT/force-app/main/default/objects/External_Account__c/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <description>External Account Email Address</description>
    <inlineHelpText>The Email Address for this GBA</inlineHelpText>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>