News UAT/force-app/main/default/objects/External_Account__c/fields/Email_Confirmation_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Confirmation_Address__c</fullName>
    <description>External Account Email Confirmation Address</description>
    <inlineHelpText>External Account Email Confirmation Address</inlineHelpText>
    <label>Email Confirmation Address</label>
    <type>Email</type>
</CustomField>