News UAT/force-app/main/default/objects/External_Account__c/fields/Expires__c.field-meta.xml
<CustomField>
    <fullName>Expires__c</fullName>
    <description>Expiry Date</description>
    <inlineHelpText>Expiry Date</inlineHelpText>
    <label>Expires</label>
    <type>Date</type>
</CustomField>