News UAT/force-app/main/default/objects/External_Account__c/fields/External_Account__c.field-meta.xml
<CustomField>
    <fullName>External_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent External Account</description>
    <inlineHelpText>Parent External Account</inlineHelpText>
    <label>Parent Booking System Account</label>
    <referenceTo>External_Account__c</referenceTo>
    <relationshipLabel>Booking System Accounts</relationshipLabel>
    <relationshipName>External_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>