News UAT/force-app/main/default/objects/External_Account__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>External Id</description>
    <externalId>true</externalId>
    <inlineHelpText>External Id</inlineHelpText>
    <label>External Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>