News UAT/force-app/main/default/objects/External_Account__c/fields/Fax__c.field-meta.xml
<CustomField>
    <fullName>Fax__c</fullName>
    <description>Main Fax Number</description>
    <inlineHelpText>Main Fax Number</inlineHelpText>
    <label>Main Fax #</label>
    <type>Phone</type>
</CustomField>