News UAT/force-app/main/default/objects/External_Account__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>Booking Contact&#39;s First Name</description>
    <inlineHelpText>Booking Contact&#39;s First Name</inlineHelpText>
    <label>First Name</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>