News UAT/force-app/main/default/objects/External_Account__c/fields/GBA_Phone__c.field-meta.xml
<CustomField>
    <fullName>GBA_Phone__c</fullName>
    <label>GBA Phone</label>
    <type>Phone</type>
</CustomField>