News UAT/force-app/main/default/objects/External_Account__c/fields/GBA_Phone_Area_Code__c.field-meta.xml
<CustomField>
    <fullName>GBA_Phone_Area_Code__c</fullName>
    <label>GBA Phone Area Code</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>