News UAT/force-app/main/default/objects/External_Account__c/fields/Genera_Name_Display__c.field-meta.xml
<CustomField>
    <fullName>Genera_Name_Display__c</fullName>
    <description>Modified by Tim Fabros - 17 / 06 / 2014 - SFE-535.
- added account type to be displayed in the GBA picklist.</description>
    <formula>Account_No__c + &#39; &#39; +  Name + &#39; (&#39; + Address__c + &#39;) - &#39; +  TEXT(Account_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Genera Name Display</label>
    <type>Text</type>
</CustomField>