News UAT/force-app/main/default/objects/External_Account__c/fields/GST_Exempt__c.field-meta.xml
<CustomField>
    <fullName>GST_Exempt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>GST Exempt</description>
    <inlineHelpText>GST Exempt</inlineHelpText>
    <label>GST Exempt</label>
    <type>Checkbox</type>
</CustomField>