News UAT/force-app/main/default/objects/External_Account__c/fields/Inactive_Date__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Date__c</fullName>
    <description>External Account Inactive Date</description>
    <inlineHelpText>External Account Inactive Date</inlineHelpText>
    <label>Inactive Date</label>
    <type>Date</type>
</CustomField>