News UAT/force-app/main/default/objects/External_Account__c/fields/Integration_Error__c.field-meta.xml
<CustomField>
    <fullName>Integration_Error__c</fullName>
    <description>Populated by webMethods if there is any issue updating downstream systems</description>
    <label>Integration Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>