News UAT/force-app/main/default/objects/External_Account__c/fields/JDE_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>JDE_Account_Number__c</fullName>
    <description>External Account JDE Number</description>
    <inlineHelpText>External Account JDE Number</inlineHelpText>
    <label>JDE Account Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>