News UAT/force-app/main/default/objects/External_Account__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Booking Contact&#39;s Last Name</description>
    <inlineHelpText>Booking Contact&#39;s Last Name</inlineHelpText>
    <label>Last Name</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>