News UAT/force-app/main/default/objects/External_Account__c/fields/Last_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Amount__c</fullName>
    <description>External Account Last Payment Amount</description>
    <inlineHelpText>External Account Last Payment Amount</inlineHelpText>
    <label>Last Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>