News UAT/force-app/main/default/objects/External_Account__c/fields/Last_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Date__c</fullName>
    <description>External Account Last Payment Date</description>
    <inlineHelpText>External Account Last Payment Date</inlineHelpText>
    <label>Last Payment Date</label>
    <type>Date</type>
</CustomField>