News UAT/force-app/main/default/objects/External_Account__c/fields/Last_Statement_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Statement_Date__c</fullName>
    <description>External Account Last Statement Date</description>
    <inlineHelpText>External Account Last Statement Date</inlineHelpText>
    <label>Last Statement Date</label>
    <type>Date</type>
</CustomField>