News UAT/force-app/main/default/objects/External_Account__c/fields/National_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>National_Credit_Limit__c</fullName>
    <description>External Account National Credit Limit</description>
    <inlineHelpText>External Account National Credit Limit</inlineHelpText>
    <label>National Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>