News UAT/force-app/main/default/objects/External_Account__c/fields/Opened__c.field-meta.xml
<CustomField>
    <fullName>Opened__c</fullName>
    <description>Opened Date</description>
    <inlineHelpText>Opened Date</inlineHelpText>
    <label>Opened</label>
    <type>Date</type>
</CustomField>