News UAT/force-app/main/default/objects/External_Account__c/fields/Order_Required__c.field-meta.xml
<CustomField>
    <fullName>Order_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>External Account Order Number Required</description>
    <inlineHelpText>External Account Order Number Required</inlineHelpText>
    <label>Order # Required</label>
    <type>Checkbox</type>
</CustomField>