News UAT/force-app/main/default/objects/External_Account__c/fields/Overdue_Balance__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Balance__c</fullName>
    <description>External Account Overdue Balance</description>
    <inlineHelpText>External Account Overdue Balance</inlineHelpText>
    <label>Overdue Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>