News UAT/force-app/main/default/objects/External_Account__c/fields/Overdue_Balance_Period_2__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Balance_Period_2__c</fullName>
    <description>External Account Overdue Balance Period 2</description>
    <inlineHelpText>External Account Overdue Balance Period 2</inlineHelpText>
    <label>Overdue Balance Period 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>