News UAT/force-app/main/default/objects/External_Account__c/fields/Owning_Credit_Division__c.field-meta.xml
<CustomField>
    <fullName>Owning_Credit_Division__c</fullName>
    <description>Booking Account Owning Credit Division</description>
    <inlineHelpText>Booking Account Owning Credit Division</inlineHelpText>
    <label>Owning Credit Division</label>
    <length>10</length>
    <type>Text</type>
</CustomField>