News UAT/force-app/main/default/objects/External_Account__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <formula>External_Account__r.Customer_Account__c</formula>
    <label>Parent</label>
    <type>Text</type>
</CustomField>