News UAT/force-app/main/default/objects/External_Account__c/fields/Parent_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Number__c</fullName>
    <description>For Outbound messaging</description>
    <formula>External_Account__r.Account_No__c</formula>
    <label>Parent Account Number</label>
    <type>Text</type>
</CustomField>