News UAT/force-app/main/default/objects/External_Account__c/fields/Payer_Account__c.field-meta.xml
<CustomField>
    <fullName>Payer_Account__c</fullName>
    <description>Default Payer Customer Account. Used by integration.</description>
    <formula>BLANKVALUE( Parent__c ,  Customer_Account__c )</formula>
    <label>Payer Account</label>
    <type>Text</type>
</CustomField>