News UAT/force-app/main/default/objects/External_Account__c/fields/Payer_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Payer_Account_Name__c</fullName>
    <formula>IF(
 ISBLANK(Parent__c),
 Customer_Account__r.Name,
 External_Account__r.Name
)</formula>
    <label>Payer Account Name</label>
    <type>Text</type>
</CustomField>