News UAT/force-app/main/default/objects/External_Account__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Main Phone Number</description>
    <inlineHelpText>Main Phone Numbe</inlineHelpText>
    <label>Main #</label>
    <type>Phone</type>
</CustomField>