News UAT/force-app/main/default/objects/External_Account__c/fields/Post_Code__c.field-meta.xml
<CustomField>
    <fullName>Post_Code__c</fullName>
    <description>External Account Address Post Code</description>
    <inlineHelpText>External Account Address Post Code</inlineHelpText>
    <label>Post Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>