News UAT/force-app/main/default/objects/External_Account__c/fields/Pre_Discount_Price__c.field-meta.xml
<CustomField>
    <fullName>Pre_Discount_Price__c</fullName>
    <formula>Rolling_12_Months_Print__c  / (1 - (CustomerDiscount__c / 100))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pre Discount Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>