News UAT/force-app/main/default/objects/External_Account__c/fields/RecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeName__c</fullName>
    <description>For outbound messaging</description>
    <formula>RecordType.Name</formula>
    <label>RecordTypeName</label>
    <type>Text</type>
</CustomField>