News UAT/force-app/main/default/objects/External_Account__c/fields/Request_for_Establish__c.field-meta.xml
<CustomField>
    <fullName>Request_for_Establish__c</fullName>
    <description>Set to true if Casual Business and Description Set - means it is awaiting Establishment in Booking System.</description>
    <formula>IF( AND( OR(ISPICKVAL(Account_Type__c, &#39;Casual Business&#39;), ISPICKVAL(Account_Type__c, &#39;Request for Established&#39;)), NOT( ISBLANK(Division__c ) ) ), true, false)</formula>
    <inlineHelpText>Awaiting Establishment in Booking System</inlineHelpText>
    <label>Request for Establish</label>
    <type>Checkbox</type>
</CustomField>