News UAT/force-app/main/default/objects/External_Account__c/fields/Rolling_12_Months_Print__c.field-meta.xml
<CustomField>
    <fullName>Rolling_12_Months_Print__c</fullName>
    <label>Rolling 12 Months Print</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>