News UAT/force-app/main/default/objects/External_Account__c/fields/Special_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Special_Instructions__c</fullName>
    <description>Special Instructions for External Account</description>
    <inlineHelpText>Special Instructions for External Account</inlineHelpText>
    <label>Special Instructions</label>
    <type>TextArea</type>
</CustomField>