News UAT/force-app/main/default/objects/External_Account__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>External Account Address State</description>
    <inlineHelpText>External Account Address State</inlineHelpText>
    <label>State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>