News UAT/force-app/main/default/objects/External_Account__c/fields/Status_As_At__c.field-meta.xml
<CustomField>
    <fullName>Status_As_At__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>Status Change Date</description>
    <inlineHelpText>Status Change Date</inlineHelpText>
    <label>Status As At</label>
    <type>Date</type>
</CustomField>