News UAT/force-app/main/default/objects/External_Account__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>Street Address field for External Account</description>
    <inlineHelpText>Street Address field for External Account</inlineHelpText>
    <label>Street</label>
    <type>TextArea</type>
</CustomField>