News UAT/force-app/main/default/objects/External_Account__c/fields/Suburb__c.field-meta.xml
<CustomField>
    <fullName>Suburb__c</fullName>
    <description>External Account Address Suburb</description>
    <inlineHelpText>External Account Address Suburb</inlineHelpText>
    <label>Suburb</label>
    <length>40</length>
    <type>Text</type>
</CustomField>