News UAT/force-app/main/default/objects/External_Account__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Booking Title</description>
    <inlineHelpText>Booking Contact&#39;s Title</inlineHelpText>
    <label>Title</label>
    <length>6</length>
    <type>Text</type>
</CustomField>