News UAT/force-app/main/default/objects/External_Account__c/fields/Total_Balance__c.field-meta.xml
<CustomField>
    <fullName>Total_Balance__c</fullName>
    <description>External Account Total Balance</description>
    <inlineHelpText>External Account Total Balance</inlineHelpText>
    <label>Total Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>