News UAT/force-app/main/default/objects/External_Account__c/fields/Web_Account__c.field-meta.xml
<CustomField>
    <fullName>Web_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>External Account Web Account</description>
    <inlineHelpText>External Account Web Account</inlineHelpText>
    <label>Web Account</label>
    <type>Checkbox</type>
</CustomField>