News UAT/force-app/main/default/objects/External_Account__c/fields/YTD_Spend__c.field-meta.xml
<CustomField>
    <fullName>YTD_Spend__c</fullName>
    <description>External Account Year-To-Date Spend</description>
    <inlineHelpText>External Account Year-To-Date Spend</inlineHelpText>
    <label>YTD Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>