News UAT/force-app/main/default/objects/External_Account__c/recordTypes/Billing_Account.recordType-meta.xml
<RecordType>
    <fullName>Billing_Account</fullName>
    <active>true</active>
    <description>Billing Accounts from CyberAd or JDE</description>
    <label>Billing Account</label>
</RecordType>